force-app/main/default/objects/Skill__c/fields/Hidden_Proficiency__c.field-meta.xml
<CustomField>
    <fullName>Hidden_Proficiency__c</fullName>
    <label>Hidden Proficiency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>