force-app/main/default/objects/Skill__c/fields/Skill_Name__c.field-meta.xml
<CustomField>
    <fullName>Skill_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Skill Name</label>
    <referenceTo>Skill_Name__c</referenceTo>
    <relationshipLabel>Skills</relationshipLabel>
    <relationshipName>Skills</relationshipName>
    <type>Lookup</type>
</CustomField>